--- a/NBC/NBC.html
+++ b/NBC/NBC.html
@@ -23,7 +23,7 @@
     </header>
 
     <div class="image-container">
-        <img src="C:\Users\AGBOOLA SAMUEL\OneDrive\Documents\delight\PROJECCT\blog\portfolio-2.jpg" alt="">
+        <img src="./BK/portfolio-2.jpg" alt="">
         <div class="overlay-text">
             <p>GET EVERY SINGLE SOLUTION.</P>
                 <h1>I'm designer<br>Haris F. watson</h1>
